# hypertrade-app

./: .gitignore  I10n.yaml  README.md  flutter_native_splash.yaml  pubspec.yaml
ai_dart/: pyproject.toml
ai_dart/utils/: get_openapi.py
android/: settings.gradle.kts
android/app/: build.gradle.kts
faas/fastapi_backend/: .gitignore  Pipfile  api.py  readme.md  vercel.json
faas/next_backend/: package.json  pnpm-lock.yaml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/extensions/: list_extensions.dart
lib/helper/: api_debug_helper.dart  haptic_utils.dart  http_service.dart  hypertrade_api_service.dart  launch_url.dart  str2list.dart  token_storage_service.dart  upload.dart
lib/l10n/: intl_en.arb  intl_zh_CN.arb  l10n.dart
lib/models/: hypertrade_user.dart  login_json.dart  strategy_models.dart  token_info.dart  vc_info.dart  wallet_models.dart
lib/provider/: auth_provider.dart  collection_provider.dart  hyper_price_provider.dart  hypertrade_provider.dart  language_provider.dart  onboard_provider.dart  strategy_provider.dart  vclist_provider.dart  wallet_provider.dart
lib/screens/: app_router.dart  home_screen.dart  hyper_price_view.dart  routes.dart
lib/services/: strategy_service.dart  wallet_service.dart
lib/theme/: colors.dart  text_style.dart
lib/utils/: responsive_helper.dart
lib/widgets/: animated_glow_textfield.dart  animated_gradient_button.dart  chart_widget.dart  custom_dropdown_field.dart  (+10 more)
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
web/: index.html  manifest.json
(+41 files in other folders)
